# A2560FPS

./: .gitignore  CMakeLists.txt  DEPLOYMENT_SUMMARY.md  INTERPOLATED_SPRITES_PROGRESS.md  INTERPOLATION_IMPLEMENTATION_COMPLETE.md  INTERPOLATION_WORK_COMPLETE.md  README.md  README_A2560FPS.md  UPGRADE.md  WORKING_DIRECTORY.md  config_test.txt  run_editor.bat  wall_jump_code.txt  wall_jump_fixed.txt
AIWork/: .gitignore  FINAL_SUMMARY.md  INTERPOLATION_IMPLEMENTATION_STATUS.md  INTERPOLATION_INTEGRATION_DESIGN.md  ISSUE_RTX5090.md  QUICKSTART.md  README.md  READY.md  STATUS.md  SUCCESS.md  check_setup.py  compare_results.py  convert_pcx_to_png.py  denormalize_frames.py  download_model.md  interp_4x_log.txt  interp_full_log.txt  interp_log.txt  interpolate_sprites.py  interpolation_log.txt  normalize_frames.py  requirements.txt  run_interpolation.bat  setup.bat  setup_rife.py
AIWork/SUPIR_v101/: HF_model_downloader.py  Kaggle_Free_SUPIR_Notebook_v7.ipynb  Massed_Compute_Install_SUPIR.sh  Massed_Compute_Instructions_READ.txt  Misc_Pip_Freeze_Windows.txt  RunPod_Install_SUPIR.sh  Runpod_Instructions_READ.txt  Windows_Install_or_Update.bat  Windows_Model_Download_Full.bat  Windows_Model_Download_Min.bat  Windows_Start_SUPIR_app.bat  requirements.txt  sha256_cache.json  verified_files_cache.json
AIWork/__MACOSX/: ._train_log
animation-frames-export/aliens/: aliens.spe_3rsb0001.pcx  aliens.spe_3rsb0003.pcx  aliens.spe_3rsf0001.pcx  aliens.spe_3rsf0003.pcx  aliens.spe_4rsb0001.pcx  aliens.spe_4rsb0003.pcx  aliens.spe_4rsf0001.pcx  aliens.spe_4rsf0003.pcx  aliens.spe_adcr0001.pcx  aliens.spe_adcr0002.pcx  aliens.spe_adcr0003.pcx  aliens.spe_adcr0004.pcx  aliens.spe_addi0001.pcx  aliens.spe_addi0002.pcx  aliens.spe_addi0003.pcx  aliens.spe_addi0004.pcx  aliens.spe_addi0005.pcx  aliens.spe_addi0006.pcx  aliens.spe_addi0007.pcx  aliens.spe_addi0008.pcx  aliens.spe_addi0009.pcx  aliens.spe_addi0010.pcx  aliens.spe_adjump.pcx  aliens.spe_adpouncew.pcx  aliens.spe_adrjf.pcx  aliens.spe_adrn0001.pcx  aliens.spe_adrn0002.pcx  aliens.spe_adrn0003.pcx  aliens.spe_adrn0004.pcx  aliens.spe_adsrj.pcx  aliens.spe_adtn0001.pcx  aliens.spe_adtn0002.pcx  aliens.spe_adtn0003.pcx  aliens.spe_afhj0001.pcx  aliens.spe_afhj0002.pcx  aliens.spe_aliamb.pcx  aliens.spe_ammobox.pcx  aliens.spe_ammopack.pcx  aliens.spe_armr_img.pcx  aliens.spe_awdi0001.pcx  (+98 more)
animation-frames-export/bigexp/: bigexp.spe_fire0001.pcx  bigexp.spe_fire0002.pcx  bigexp.spe_fire0003.pcx  bigexp.spe_fire0004.pcx  bigexp.spe_fire0005.pcx  bigexp.spe_fire0006.pcx  bigexp.spe_fire0007.pcx
animation-frames-export/droid/: droid.spe_d0001.pcx  droid.spe_d0003.pcx  droid.spe_d0004.pcx  droid.spe_d0005.pcx  droid.spe_d0006.pcx  droid.spe_d0007.pcx  droid.spe_d0008.pcx  droid.spe_d0009.pcx  droid.spe_d0010.pcx  droid.spe_d0011.pcx  droid.spe_d0012.pcx  droid.spe_d0013.pcx  droid.spe_dd0001.pcx  droid.spe_dd0002.pcx  droid.spe_dd0003.pcx  droid.spe_dd0004.pcx  droid.spe_dd0005.pcx  droid.spe_dd0006.pcx  droid.spe_dd0007.pcx  droid.spe_dd0008.pcx  droid.spe_df0004.pcx  droid.spe_df0005.pcx  droid.spe_df0006.pcx  droid.spe_df0007.pcx  droid.spe_df0009.pcx  droid.spe_ds0001.pcx  droid.spe_ds0002.pcx
animation-frames-export/fire/: fire.spe_f0001.pcx  fire.spe_f0002.pcx  fire.spe_f0003.pcx  fire.spe_f0004.pcx  fire.spe_f0005.pcx  fire.spe_f0006.pcx  fire.spe_f0007.pcx  fire.spe_f0008.pcx  fire.spe_f0009.pcx  fire.spe_f0010.pcx  fire.spe_f0011.pcx  fire.spe_f0012.pcx  fire.spe_f0013.pcx  fire.spe_f0014.pcx  fire.spe_f0015.pcx  fire.spe_f0016.pcx  fire.spe_f0017.pcx  fire.spe_f0018.pcx  fire.spe_f0019.pcx  fire.spe_f0020.pcx  fire.spe_f0021.pcx  fire.spe_f0022.pcx  fire.spe_f0023.pcx  fire.spe_f0024.pcx  fire.spe_f0025.pcx  fire.spe_f0026.pcx  fire.spe_f0027.pcx  fire.spe_f0028.pcx  fire.spe_f0029.pcx  fire.spe_f0030.pcx  fire.spe_f0031.pcx  fire.spe_f0032.pcx  fire.spe_f0033.pcx
art-extracted/: alien.spe_700.pcx  alien.spe_701.pcx  alien.spe_702.pcx  alien.spe_703.pcx  alien.spe_704.pcx  alien.spe_705.pcx  alien.spe_706.pcx  alien.spe_707.pcx  alien.spe_708.pcx  alien.spe_709.pcx  alien.spe_710.pcx  alien.spe_711.pcx  alien.spe_712.pcx  alien.spe_713.pcx  alien.spe_714.pcx  alien.spe_715.pcx  alien.spe_716.pcx  alien.spe_717.pcx  alien.spe_718.pcx  alien.spe_719.pcx  alien.spe_720.pcx  alien.spe_721.pcx  alien.spe_722.pcx  alien.spe_723.pcx  alien.spe_724.pcx  alien.spe_725.pcx  alien.spe_726.pcx  alien.spe_727.pcx  alien.spe_728.pcx  alien.spe_729.pcx  alien.spe_730.pcx  alien.spe_731.pcx  alien.spe_732.pcx  alien.spe_733.pcx  alien.spe_734.pcx  alien.spe_735.pcx  alien.spe_736.pcx  alien.spe_737.pcx  alien.spe_738.pcx  alien.spe_739.pcx  (+1580 more)
art-extracted/keys.spe_mac_art/: rock.pcx
cmake/: bundle_runtime.cmake
docs/: CHANGELOG_MODERNIZATION.md  TECH_DESIGN.md
msvc-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  abuse.sln  cmake_install.cmake  config.h  install_manifest.txt
msvc-build/data/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
msvc-build/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  abuse-tool.vcxproj  abuse-tool.vcxproj.filters  abuse.vcxproj  (+7 more)
msvc-install/: README_ABUSE25.txt  config.txt  config_2025.txt
src/: CMakeLists.txt  configuration.cpp  cop.cpp  extend.cpp  extend.h  file_utils.h  game.cpp  game.h  interp_loader.cpp  interp_loader.h  level.cpp  objects.cpp  particle.cpp  view.cpp
(+147 files in other folders)
